[package]
name = "ahc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = {version = "0.4.3", features = ["derive"] }
num = "0.4.0"
itertools = "0.10.3"
num-integer = "0.1"
superslice = "1.0.0"
cargo-snippet = "0.6.5"
rand = { version = "=0.7.3", features = ["small_rng"] }
getrandom = "=0.1.14"
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"
rand_distr = "=0.2.2"
lazy_static = "1.4.0"